force-app/main/default/objects/AssociateResourceandRequest__c/AssociateResourceandRequest__c.object-meta.xml
<CustomObject>
    <label>Raise Query</label>
    <nameField>
        <displayFormat>ARR-{0000}</displayFormat>
        <label>AssociateResourceandRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Raise Queries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>