force-app/main/default/objects/AssociateResourceandRequest__c/fields/Additional_Commnets__c.field-meta.xml
<CustomField>
    <fullName>Additional_Commnets__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>