force-app/main/default/objects/AssociateResourceandRequest__c/fields/All_Previously_Notified_PS_Team_Users__c.field-meta.xml
<CustomField>
    <fullName>All_Previously_Notified_PS_Team_Users__c</fullName>
    <label>All Previously Notified PS Team Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>