force-app/main/default/objects/AssociateResourceandRequest__c/fields/CC_1__c.field-meta.xml
<CustomField>
    <fullName>CC_1__c</fullName>
    <label>CC (1)</label>
    <type>Email</type>
</CustomField>