force-app/main/default/objects/AssociateResourceandRequest__c/fields/CC_2__c.field-meta.xml
<CustomField>
    <fullName>CC_2__c</fullName>
    <label>CC (2)</label>
    <type>Email</type>
</CustomField>