force-app/main/default/objects/AssociateResourceandRequest__c/fields/Notified_Users__c.field-meta.xml
<CustomField>
    <fullName>Notified_Users__c</fullName>
    <label>All Previously Notified Opportunity User</label>
    <length>101072</length>
    <type>LongTextArea</type>
</CustomField>