force-app/main/default/objects/AssociateResourceandRequest__c/fields/Presales_Funding_Request__c.field-meta.xml
<CustomField>
    <fullName>Presales_Funding_Request__c</fullName>
    <label>Presales Funding Request</label>
    <referenceTo>Presales_Funding_Request__c</referenceTo>
    <relationshipLabel>Raise Queries</relationshipLabel>
    <relationshipName>AssociateResourceandRequests_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>