force-app/main/default/objects/AssociateResourceandRequest__c/fields/Raise_Query__c.field-meta.xml
<CustomField>
    <fullName>Raise_Query__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Raise Query</label>
    <type>Checkbox</type>
</CustomField>