force-app/main/default/objects/AssociateResourceandRequest__c/fields/Raise_to_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Raise_to_Opportunity_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Raise Query to Opportunity Team</label>
    <type>Checkbox</type>
</CustomField>