force-app/main/default/objects/AssociateResourceandRequest__c/fields/Raise_to_Other__c.field-meta.xml
<CustomField>
    <fullName>Raise_to_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Raise to Other&apos;s</label>
    <type>Checkbox</type>
</CustomField>