force-app/main/default/objects/AssociateResourceandRequest__c/fields/Raise_to_PS_Team__c.field-meta.xml
<CustomField>
    <fullName>Raise_to_PS_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will update field in Send to PS and trigger email notification to mentioned PS Team</description>
    <label>Raise Query to PS Team</label>
    <type>Checkbox</type>
</CustomField>