force-app/main/default/objects/AssociateResourceandRequest__c/fields/Raised_Objection_Status__c.field-meta.xml
<CustomField>
    <fullName>Raised_Objection_Status__c</fullName>
    <formula>IF(AND(
Raise_to_Opportunity_Owner__c = True,Raise_to_Other__c=False,Raise_to_PS_Team__c=False),
 &apos;Raised to Sales Team&apos;,

IF(AND(Raise_to_Other__c = True,Raise_to_Opportunity_Owner__c=False,Raise_to_PS_Team__c=False),
&apos;Raised to Others&apos;,

IF(AND(Raise_to_PS_Team__c = True,
Raise_to_Other__c=False,
Raise_to_Opportunity_Owner__c=False), &apos;Raised to PS Team&apos;,

IF(AND(
Raise_to_Opportunity_Owner__c = True,
Raise_to_PS_Team__c = True,
Raise_to_Other__c = True),&apos;Raised to Sales Team, PS Team and Others&apos;,
IF(
AND(
Raise_to_Opportunity_Owner__c = True,
Raise_to_PS_Team__c = True,
Raise_to_Other__c=False),&apos;Raised to Sales Team and PS Team&apos;,
If(
AND(
Raise_to_Other__c = True,
Raise_to_PS_Team__c = True,
Raise_to_Opportunity_Owner__c=False),&apos;Raised to PS Team and Others&apos;,
If(Raise_to_Opportunity_Owner__c = True &amp;&amp;
Raise_to_Other__c = True &amp;&amp; Raise_to_PS_Team__c = False ,&apos;Raised to to Sales Team and Others&apos;,
&apos;&apos;)))))))</formula>
    <label>Raised Objection Status</label>
    <type>Text</type>
</CustomField>