force-app/main/default/objects/AssociateResourceandRequest__c/validationRules/Check_Raise_to_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Raise_to_Other</fullName>
    <active>true</active>
    <description>If Email&apos;s are entered, but the Raise to Other&apos;s is marked uncheck. It will throw error</description>
    <errorConditionFormula>OR(
AND(Raise_to_Other__c=False,Email_ID__c!=null),
AND(Raise_to_Other__c=False,CC_1__c !=null),
AND(Raise_to_Other__c=False,CC_2__c!=null))</errorConditionFormula>
    <errorDisplayField>Raise_to_Other__c</errorDisplayField>
    <errorMessage>If Email is entered, please check Raise to Others to send notification</errorMessage>
</ValidationRule>