force-app/main/default/objects/AssociateResourceandRequest__c/validationRules/To_Raise_Query.validationRule-meta.xml
<ValidationRule>
    <fullName>To_Raise_Query</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
Raise_to_Opportunity_Owner__c = false,
Raise_to_PS_Team__c = false,
Raise_to_Other__c = false
)</errorConditionFormula>
    <errorMessage>To create/raise query, please check respected checkbox of team.</errorMessage>
</ValidationRule>